emg_layout/src/old/snapshots/emg_layout__old__animation__tests__updated_16_b_0.snap
---
source: emg_layout/src/old/animation.rs
assertion_line: 1039
expression: "&a"

---
AnimationEdge {
    inside: AnimationInsideOG {
        steps: StateVar(
            [
                _Step,
                To(
                    [
                        Prop(
                            TypeName(
                                "opacity",
                            ),
                            Motion {
                                position: NotNan(
                                    1.0,
                                ),
                                velocity: NotNan(
                                    0.0,
                                ),
                                target: NotNan(
                                    1.0,
                                ),
                                interpolation: Spring {
                                    stiffness: NotNan(
                                        170.0,
                                    ),
                                    damping: NotNan(
                                        26.0,
                                    ),
                                },
                                unit: Empty,
                                interpolation_override: None,
                            },
                        ),
                    ],
                ),
            ],
        ),
        interruption: StateVar(
            [],
        ),
        props: [
            StateVarPropertyOG(
                StateVar(
                    Prop(
                        TypeName(
                            "opacity",
                        ),
                        Motion {
                            position: NotNan(
                                0.95278155548,
                            ),
                            velocity: NotNan(
                                -2.83322,
                            ),
                            target: NotNan(
                                0.0,
                            ),
                            interpolation: Spring {
                                stiffness: NotNan(
                                    170.0,
                                ),
                                damping: NotNan(
                                    26.0,
                                ),
                            },
                            unit: Empty,
                            interpolation_override: None,
                        },
                    ),
                ),
            ),
        ],
    },
    timing: StateAnchor(
        Timing {
            current: 16ms,
            dt: 16.666ms,
        },
    ),
    running: StateAnchor(
        true,
    ),
}
